ajuste no tamanho para encaixar na tela com baixa resolucao

--- a/views/apontamento.ejs
+++ b/views/apontamento.ejs
@@ -36,10 +36,10 @@
                         <option value="411">411</option>
                         <% if (producao.maquina) {%>
                         <option selected="<%= producao.maquina %>"><%= producao.maquina %></option>
-                        <% } else { %> <option selected="Default"> <%= functions.GetMaqSelecGlobal() %></option>
+                        <% } else { %> <option selected="Default">Selecione</option>
                         <% } %>
                     </select>  
-                    <br><br>
+                    <br>
                 </div>
                 <br>
                 <div class="container">
