--- a/views/apontamento.ejs
+++ b/views/apontamento.ejs
@@ -39,6 +39,10 @@
                     <span>Máquina:</span></label> 
                     <br>
                     <select class="select" name="maquina" id="selectMaquina" onchange="changeMaquina()">
+                        <option value="208">208</option>
+                        <option value="407">407</option>
+                        <option value="408">408</option>
+                        <option value="409">409</option>
                         <option value="410">410</option>
                         <option value="411">411</option>
                         <% if (producao.maquina) {%>
