--- a/views/maquinas.ejs
+++ b/views/maquinas.ejs
@@ -35,7 +35,9 @@
         
     </style>
 </head>
-<body onload= "JavaScript:AutoRefresh(10000);">
+<!--<body onload= "JavaScript:AutoRefresh(10000);"> -->
+<body>
+ 
     <script>
         function AutoRefresh ( t ) {
             setTimeout("location.reload(true);", t)
@@ -47,12 +49,18 @@
                 userUpdate.send(JSON.stringify({'marcado': status,
                                                 'id':id}));
         }
-        function deleteProd(id) {
+        function xmlHTTPDelete(id) {
+            return new Promise(resolve => {
             let userDelete = new XMLHttpRequest();
                 userDelete.open('post', '/deleteProducao', true);
                 userDelete.setRequestHeader("Content-Type", "application/json;charset=UTF-8")
                 userDelete.send(JSON.stringify({'id':id}));
+                setTimeout(() => {
+                    resolve("Resolvido")
+                },1200);
+            })
         }
+       
         function prodMarcado(element) {
             let parent = element.parentNode; // coleta pai do elemento
             let idOpMaquina = element.id; // coleta id do elemento
@@ -65,10 +73,15 @@
                 updateProdMarcado(idOpMaquina, "N")
             }
         }
-        function removeApont(element) {
+        async function removeApont(element) {
+            console.log(element);
             let idOpMaquina = element.id;
-            deleteProd(idOpMaquina);
-            location.reload(true);
+            xmlHTTPDelete(idOpMaquina).then(ele =>{
+                console.log(ele)
+                location.reload(true);
+            });
+            //location.reload(true);
+            //setTimeout(function(){location.reload(true)},1500)
         }
     </script>
     <div>
@@ -77,7 +90,7 @@
     <div>
         <h1>Recurso: 
             <%= maquina[0].maquina %>
-        </h1>
+            <button><a href="/fila/<%= maquina[0].maquina %>">FILA</a></button> </h1> 
         <% maquina.forEach(function(maquina) { %>
             ____________________________________
             <div>
@@ -86,15 +99,13 @@
                     <span class="descNumeroOpMaquina">OP:</span> 
                     <span class="numeroOpMaquina"><%= maquina.op %></span> 
                     <% if (maquina.marcado === "S") { %>
-                        <input type="checkbox" id="<%= maquina.id %>" checked=true onclick='prodMarcado(this)'>
-                        
+                        <input type="checkbox" id="<%= maquina.id %>" checked=true onclick='prodMarcado(this)'>  
                     <%
                     }
                     else { %>
                         <input type="checkbox" id="<%= maquina.id %>" onclick='prodMarcado(this)'>
                     <% }
                     %>
-                    
                     <br>
                     <span class="descDataInicioOpMaquina">Data Início:</span>
                     <span class="dataInicioOpMaquina"><%= maquina.datainicio.toLocaleDateString('pt-BR', {hour: 'numeric', minute: 'numeric'}) %></span>
