--- a/views/apontamento.ejs
+++ b/views/apontamento.ejs
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="/fancybox/jquery.easing-1.4.pack.js"></script> 
 <script type="text/javascript" src="/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
 
+
 <link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 <body onload="onLoadApontamentos();"> <!-- Utilizada para carregar maquina quando for inserido uma OP ja existente no banco-->
    
@@ -54,7 +55,7 @@
                 </div>
                 <br>
                 <div class="container">
-                    <button class="buttonStart" id="Start" onclick="insertDate('valueStart')"> 
+                    <button class="buttonStart" id="Start" onclick="insertDate('valueStop');"> 
                         INICIAR
                     </button> 
                     <h3 class="container" id="valueStart"><% if (producao.datainicio) { %> <%=functions.dateFormat("custom",producao.datainicio)%><%} else null %></h3>
