--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -24,9 +24,9 @@
         text-align: center;
     }
     .containerIframe {
-        position:fixed;
-    top:300px;
-    left:500px;
+    position:fixed;
+    top:25%;
+    left:25%;
     width:100%;
     height:100%;
     /*background:#000;
