--- a/views/apontamento.ejs
+++ b/views/apontamento.ejs
@@ -55,7 +55,7 @@
                 </div>
                 <br>
                 <div class="container">
-                    <button class="buttonStart" id="Start" onclick="insertDate('valueStop');"> 
+                    <button class="buttonStart" id="Start" onclick="insertDate('valueStart');"> 
                         INICIAR
                     </button> 
                     <h3 class="container" id="valueStart"><% if (producao.datainicio) { %> <%=functions.dateFormat("custom",producao.datainicio)%><%} else null %></h3>
