--- a/views/apontamento.ejs
+++ b/views/apontamento.ejs
@@ -31,7 +31,7 @@
                        <% } else { %>
                             <input class="input" type="number" name="op" id="inputOP" placeholder="Digite a OP" value="<%= producao.op %>"/>
                         <%} %>
-                        <button type="submit" class="buttonOK" id="buttonOP" onclick="insertOP()">OK</button>
+                        <button type="submit" class="buttonOK" id="buttonOP">OK</button>
                         <!--<a class="iframe" href="files/228080.html" id="buttonPrintOP"><img src="images/printimg.png" style="width:30px;height:30px;"></a> -->
                     
 
