Add cores extras, adicionado sessao para delete de arquivos CIM

--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -195,7 +195,7 @@
                     <th>Descrição Item</th>
                     <th>Imagem do Item</th>
                     <th>Perfil de Cores</th>
-                    <th>Visualizar OP</th>
+                    <!--<th>Visualizar OP</th>-->
                 </tr>
                 <tr>
                     <% 
@@ -230,9 +230,9 @@
                         <td>
                             <% if (maquina.tem_perfil > 0) {%> <img src="/images/iconView.png" class="iconPerfil" onclick="openIframe(this)"></a></img> <% } %>
                         </td>
-                        <td>
+                        <!--<td>
                             <img src="/images/iconView.png" class="iconOP" onclick="openIframe(this)"></a></img> 
-                        </td>
+                        </td> -->
                         <!-- Trigger the Modal -->
                         <!--<td><img onclick="modalImage(this)" id="<%=maquina.codigo_item%>" src="/images/<%=maquina.codigo_item%>.jpg" alt="Snow" style="width:100%;max-width:300px">-->
                         <!-- The Modal -->
